--- a/stories/feedback.stories.mdx
+++ b/stories/feedback.stories.mdx
@@ -4,7 +4,7 @@ import { Meta } from '@storybook/addon-docs/blocks';
 
 # Feedback
 
-In order to improve the Microsoft Graph Toolkier, we need your feedback!
+In order to improve the Microsoft Graph Toolkit, we need your feedback!
 
 There are various ways for you to provide feedback of your experience and help us make the Toolkit better.
 
