--- a/stories/overview.stories.mdx
+++ b/stories/overview.stories.mdx
@@ -1,8 +1,8 @@
-import { Meta } from '@storybook/addon-docs/blocks';
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title="Overview" />
 
-# Microsoft Graph Toolkit: UI Components and Authentication Providers for Microsoft Graph 
+# Microsoft Graph Toolkit: UI Components and Authentication Providers for Microsoft Graph
 
 The Microsoft Graph Toolkit is a collection of reusable, framework-agnostic components and authentication providers for accessing and working with Microsoft Graph. The components are fully functional right of out of the box, with built in providers that authenticate with and fetch data from Microsoft Graph.
 
@@ -30,7 +30,7 @@ npm i @microsoft/mgt
 
 ### Components
 
-The Microsoft Graph Toolkit includes a collection of web components for the most commonly built experiences powered by Microsoft Graph APIs. 
+The Microsoft Graph Toolkit includes a collection of web components for the most commonly built experiences powered by Microsoft Graph APIs.
 
 The components are also available as [React components](https://docs.microsoft.com/graph/toolkit/get-started/mgt-react).
 
@@ -67,6 +67,7 @@ The components are also available as [React components](https://docs.microsoft.c
 ## Who should use it?
 
 The Microsoft Graph Toolkit is great for developers of all experience levels looking to develop an app that connects to and accesses data from Microsoft Graph, such as a:
+
 - Web app
 - Microsoft Teams tab
 - SharePoint web part
@@ -80,7 +81,6 @@ The Microsoft Graph Toolkit is supported in the following browsers.
 | ![Edge](https://docs.microsoft.com/graph/toolkit/images/edgeIcon.png) | ![Firefox](https://docs.microsoft.com/graph/toolkit/images/firefoxIcon.png) | ![Chrome](https://docs.microsoft.com/graph/toolkit/images/chromeIcon.png) | ![Safari](https://docs.microsoft.com/graph/toolkit/images/safariIcon.png) | ![Opera](https://docs.microsoft.com/graph/toolkit/images/operaIcon.png) | ![Samsung Internet](https://docs.microsoft.com/graph/toolkit/images/samsungInternetIcon.png) |
 | --------------------------------------------------------------------- | --------------------------------------------------------------------------- | ------------------------------------------------------------------------- | ------------------------------------------------------------------------- | ----------------------------------------------------------------------- | -------------------------------------------------------------------------------------------- |
 | **Edge**                                                              | **Firefox**                                                                 | **Chrome**                                                                | **Safari**                                                                | **Opera**                                                               | **Samsung**                                                                                  |
-
 
 ## Next steps
 
